2009-09-04  Lars Hartmann  <lars (at) chaotika (dot) org>
	Fixed Shellutils:
	* bin/lp_atomcompare.c: will now return 0 and print out the output
	of lpatom_cmp.

	Added shellutils using libportage provided by Patrick Lauer:
	* bin/lp_atomcompare.c: added.
	* bin/lp_isatom.c: added.

2009-08-30  Lars Hartmann  <lars (at) chaotika (dot) org>

	Fixed lputil_int64len test:
	* test/01_lputil_int64len.c: replaced lputil_intlen function call
	with lputil_int64len.
	Used inttypes.h printf macros to make it work on 32bit platforms too.

	Cleaned up error handling:
	* src/liblpxpak.c: Replaced individual cleanup routines with gotos.
	* src/liblpversion.c (lpversion_compile): added missing return.

	Optimized replacement functions:
	* replace/stpcpy.c: beautified.
	* replace/strndup.c: fastified.

2009-08-28  Lars Hartmann  <lars (at) chaotika (dot) org>

	Cleaned up tests:
	* test/04_lpxpak.c: replaced multiple repeated bailout code with
	gotos.
	* test/05_lparchives.c: fixed possible error when calling close(2)
	after open(2) failed.

	Fixed compiler warnings:
	* src/liblpatom.c: added declaration for stpcpy if we are using glibc.
	* src/liblputil.c: added declaration for stpcpy if we are using glibc.
	* src/liblpversion.c: added declaration for stpcpy if we are using glibc.
	(lpversion_version_compile): removed unused variable len.

2009-08-27  Lars Hartmann  <lars (at) chaotika (dot) org>

        Cleaned up test for lparchive:
        * test/05_lparchives.c: replaced multiple bailout-code with goto.

	Fixed Compile error:
	* test/05_lparchives.c (test_lparchives_extract): fixed syntax error.

	Fixed bug only occuring in make distcheck, because autotools do
	set crazy file permissions:
	* test/05_lparchives.c : added workaround.

	Fixed "cant make target whatever/libportage.la" error:
	* test/Makefile.am: added relative paths.

	Fixed SIGABRT in test:
	* test/05_lparchives.c (test_lparchives_extract): one should
	return if an error has occured ;-).
